--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
                 <img src="./images/S profile picture image.jpeg" alt="" />
                 <span class="over-lapping-images">
                   <img src="./images/face pic 2.jpg" alt="" />
-                  <img src="./images/profile picture.jpg" alt="" />
+                  <img src="./images/purple profile picture.jpg" alt="" />
                 </span>
                 <div class="about-project">
                   <h3>A million knots project</h3>
@@ -116,7 +116,7 @@
                 <img src="./images/pumpkin profile pic.jpg" alt="" />
                 <span class="over-lapping-images">
                   <img src="./images/face pic 2.jpg" alt="" />
-                  <img src="./images/profile picture.jpg" alt="" />
+                  <img src="./images/purple profile picture.jpg" alt="" />
                 </span>
                 <div class="about-project">
                   <h3>Adventure 1290 Dashboard</h3>
@@ -132,7 +132,7 @@
               </div>
 
               <div class="project-3 project">
-                <img src="./images/profile pic.png" alt="" />
+                <img src="./images/profile picture letter A.png" alt="" />
                 <span class="over-lapping-images">
                   <img src="./images/face pic 2.jpg" alt="" />
                   <img src="./images/face pic 3.jpg" alt="" />
@@ -287,7 +287,7 @@
                 <div class="activity activity-1">
                   <span class="over-lapping-images2">
                     <img src="./images/face pic 2.jpg" alt="" />
-                    <img src="./images/profile picture.jpg" alt="" />
+                    <img src="./images/purple profile picture.jpg" alt="" />
 
                     <span class="activity-info">
                       <p>
@@ -305,7 +305,7 @@
                 <div class="activity activity-2">
                   <span class="over-lapping-images2">
                     <img src="./images/face pic 2.jpg" alt="" />
-                    <img src="./images/profile picture.jpg" alt="" />
+                    <img src="./images/purple profile picture.jpg" alt="" />
 
                     <span class="activity-info">
                       <p>
