--- a/project.html
+++ b/project.html
@@ -255,7 +255,7 @@
                 </div>
 
                 <div>
-                  <i class="fa-solid fa-align-left"></i>
+                  <i class="fa-solid fa-bars"></i>
                   <i class="fa-solid fa-magnifying-glass"></i>
                   <p>Filter</p>
                 </div>
@@ -355,7 +355,7 @@
             </div>
 
             <div class="income">
-              <span class="abt-money white">
+              <span class="abt-money white-2">
                 <p class="right3">
                   <span class="green">
                     <i class="fa-solid fa-caret-up"></i> +20%
