--- a/project.html
+++ b/project.html
@@ -22,6 +22,7 @@
     <nav id="top-nav-bar">
       <div class="left-side">
         <img src="./images/project logo.png" alt="logo" />
+
         <!-- <i class="fa-solid fa-arrow-right"></i> -->
         <a href="" class="bg-green"
           ><i class="fa-solid fa-grip"></i> Dashboard
@@ -48,7 +49,7 @@
           <i class="fa-solid fa-envelope" data-count="2"></i>
         </span>
         <span class="colorful">
-          <img src="/images/face pic 2.jpg" alt="" />
+          <img src="./images/face pic 2.jpg" alt="" />
         </span>
       </div>
     </nav>
